--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AidFlow | Sign in</title>
+    <title>AidFlow | Portfolio</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,74 +32,74 @@
     <script defer src="/__/firebase/9.6.9/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/9.6.9/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/9.6.9/firebase-performance-compat.js"></script>
-    <!-- 
+    <!--
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <!-- Firebase UI -->
-    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
-
     <!-- Entry point for app -->
     <script src="js/app.js"></script>
-  </head>
-  <body>
-    <header>
-      <div class="px-3 py-2 border-bottom">
+</head>
+<body>
+<header>
+    <div class="px-3 py-2 border-bottom">
         <div class="container">
-          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-              <h3 class="m-0">Logo</h3>
-            </a>
-
-            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-              <li>
-                <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-secondary">
-                  <i class="bi bi-house-fill" style="font-size: 1.25rem;"></i>
-                  Home
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
+                    <h3 class="m-0">Logo</h3>
                 </a>
-              </li>
-              <!--<li>
-                <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                  <i class="bi bi-house-fill" style="font-size: 1.25rem;"></i>
-                  Impact
-                </a>
-              </li>-->
-            </ul>
-          </div>
-        </div>
-      </div>
-    </header>
 
-
-    <div class="container">
-      <div class="my-5 text-center">
-        <h1 class="mb-4">Sign in</h1>
-        <div id="firebaseui-auth-container"></div>
-        <div id="loader" class="spinner-border text-primary mt-4" role="status">
-          <span class="visually-hidden">Loading...</span>
+                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <li>
+                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-secondary">
+                            <i class="bi bi-pie-chart-fill" style="font-size: 1.25rem;"></i>
+                            Portfolio
+                        </a>
+                    </li>
+                    <li>
+                        <a href="impact.html" class="d-flex flex-column justify-content-center align-items-center nav-link">
+                            <i class="bi bi-emoji-smile" style="font-size: 1.25rem;"></i>
+                            Impact
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="d-flex flex-column justify-content-center align-items-center nav-link">
+                            <i class="bi bi-gear-fill" style="font-size: 1.25rem;"></i>
+                            Settings
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link">
+                            <i class="bi bi-box-arrow-left" style="font-size: 1.25rem;"></i>
+                            Sign out
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
+</header>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
+<div class="container">
+    [Portfolio here]
+</div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
         app.checkFirebaseServices();
 
         // This is the login/signup page, so first check if the user is already logged in.
         firebase.auth().onAuthStateChanged((user) => {
-          if (user) {
-            // User is signed in, see docs for a list of available properties.
-            // https://firebase.google.com/docs/reference/js/firebase.User
-            var uid = user.uid;
-          } else {
-            // User is signed out. Show the sign in widget.
-            app.initFirebaseUi();
-          }
+            if (user) {
+                // User is signed in, see docs for a list of available properties.
+                // https://firebase.google.com/docs/reference/js/firebase.User
+
+            } else {
+                // User is signed out. They can't be on this page. Put them back on the auth page.
+            }
         });
-      });
-    </script>
-  </body>
+    });
+</script>
+</body>
 </html>
