--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,7 +114,7 @@
                   last_logged_in: firebase.firestore.FieldValue.serverTimestamp()
                 })
                 .then(() => {
-                  window.location.href = 'onboarding.html';
+                  window.location.href = 'onboarding-welcome.html';
                 })
                 .catch((error) => {
                   console.error("Error adding document: ", error);
