--- a/public/onboarding-welcome.html
+++ b/public/onboarding-welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Goodist | Settings</title>
+    <title>Goodist | Welcome</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,47 +45,11 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-<header>
-    <div class="px-3 py-2 border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-                    <h3 class="m-0">Logo</h3>
-                </a>
-
-                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                    <li>
-                        <a href="portfolio.html" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-pie-chart-fill" style="font-size: 1.25rem;"></i>
-                            Portfolio
-                        </a>
-                    </li>
-                    <li>
-                        <a href="impact.html" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-emoji-smile" style="font-size: 1.25rem;"></i>
-                            Impact
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-secondary">
-                            <i class="bi bi-gear-fill" style="font-size: 1.25rem;"></i>
-                            Settings
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-box-arrow-left" style="font-size: 1.25rem;"></i>
-                            Sign out
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
-
-<div class="container">
-    [Settings here]
+<div class="container text-center py-5 px-3">
+    <img style="width: 200px; height: 200px;" src="https://firebasestorage.googleapis.com/v0/b/aidflow.appspot.com/o/marketing%2Fwelcome.png?alt=media&token=349a4f5c-29be-4513-adca-02f0c8429c17" alt="image of heart shaped world">
+    <h1 class="mt-4 mb-3">Welcome!</h1>
+    <p class="mb-5">Start by picking up to <span id="causeCount">10</span> causes to support</p>
+    <a class="btn btn-primary btn-lg" href="onboarding-causes.html" role="button">Let's go!</a>
 </div>
 
 <script>
@@ -94,12 +58,18 @@
 
         // This is the login/signup page, so first check if the user is already logged in.
         firebase.auth().onAuthStateChanged((user) => {
-            if (user) {
+            if (!user) {
+                // User is signed out. They can't be on this page. Put them back on the auth page.
+                window.location.href = 'index.html';
+            } else {
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
-            } else {
-                // User is signed out. They can't be on this page. Put them back on the auth page.
+                // Get the causes data, just to count.
+                const db = firebase.firestore();
+                db.collection("causes").get().then((querySnapshot) => {
+                    $('#causeCount').html(querySnapshot.size);
+                });
             }
         });
     });
