--- a/public/onboarding-budget.html
+++ b/public/onboarding-budget.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Goodist | Causes</title>
+    <title>Goodist | Budget</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -46,16 +46,16 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">Which causes would you like to support?</h1>
+    <h1 class="mb-5">What is your monthly giving budget?</h1>
 
-    <div id="causeSelector" class="mb-5" style="max-width: 800px; margin: 0 auto;">
+    <div id="budgetSelector" class="mb-5" style="max-width: 800px; margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
 
-    <a class="btn btn-outline-primary btn-lg" href="onboarding-welcome.html" role="button">Back</a>
-    <button id="submitCausesButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitCauses();">Continue <i class="bi bi-arrow-right"></i></button>
+    <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
+    <button id="submitBudgetButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitBudget();">Continue <i class="bi bi-arrow-right"></i></button>
 </div>
 
 <script>
@@ -75,40 +75,70 @@
                 // First, get the user data.
                 db.collection("users").doc(user.uid).get().then((userDoc) => {
                     if (userDoc.exists) {
-                        // If it exists, then get the causes data.
-                        db.collection("causes").get().then((querySnapshot) => {
-                            let causesHTML = '';
-                            querySnapshot.forEach((causeDoc) => {
-                                // causeData.data() is never undefined for query doc snapshots.
-                                // Get the data for both causes and users.
-                                const causeData = causeDoc.data();
-                                const userData = userDoc.data();
+                        // If the user record exists, get the budget.
+                        const userData = userDoc.data();
 
-                                // Is this cause in the user's causes?
-                                const checked = userData.causes.indexOf(causeDoc.id) > -1;
-
-                                // Build the HTML.
-                                causesHTML += `
+                        // In any event, build the budget selector HTML.
+                        const html = `
+                            <div style="max-width: 325px; margin: 0 auto;">
+                                <div class="row gx-2 mb-2">
                                     <div class="col">
-                                        <div id="${causeDoc.id}" class="card causeCard cursor-hover" onclick="toggleCause('${causeDoc.id}');">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="causeName p-3 text-start">
-                                                    ${causeData.cause_name}<i class="bi bi-info-circle-fill ms-2"></i>
-                                                </div>
-                                                <div class="causeCheck ${checked ? 'checked' : 'unchecked'} py-2 px-3" style="font-size: 1.5rem;">
-                                                    <i class="bi bi-${checked ? 'check-' : ''}square"></i>
-                                                </div>
-                                            </div>
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$5</button>
                                         </div>
                                     </div>
-                                `;
-                            });
-                            $('#causeSelector').html(`
-                                <div id="causesList" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                                    ${causesHTML}
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$10</button>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$25</button>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$50</button>
+                                        </div>
+                                    </div>
                                 </div>
-                            `);
-                        });
+
+                                <div class="row gx-2 mb-2">
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$100</button>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$250</button>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$500</button>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="d-grid gap-2">
+                                            <button type="button" class="btn btn-outline-dark btn-block">$1,000</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="dollaSign">$</span>
+                                    <input id="customAmount" type="number" step="5" min="5" max="999999" class="form-control" placeholder="Custom amount" aria-label="customAmount" aria-describedby="dollaSign">
+                                </div>
+                            </div>
+                        `;
+
+                        if (userData.budget) {
+                            // There is a budget set. Put it in the input
+                        }
+
+                        $('#budgetSelector').html(html);
                     } else {
                         // doc.data() will be undefined in this case
                         console.log("No such document!");
@@ -147,11 +177,11 @@
         }
     }
 
-    function submitCauses() {
-        const btn = $('#submitCausesButton');
+    function submitBudget() {
+        const btn = $('#submitBudgetButton');
         // Don't do anything if the button is disabled.
         if (btn.hasClass('disabled')) {
-            alert('Choose at least one cauase to continue');
+            alert('Choose a monthly budget to continue');
             return;
         }
 
@@ -183,14 +213,13 @@
                 docRef.update({
                     causes: selectedCauses
                 })
-                .then(() => {
-                    // Success! Move on to budget input.
-                    window.location.href = 'onboarding-budget.html';
-                })
-                .catch((error) => {
-                    // The document probably doesn't exist.
-                    alert("Error updating document: " + error);
-                });
+                    .then(() => {
+                        console.log("Document successfully updated!");
+                    })
+                    .catch((error) => {
+                        // The document probably doesn't exist.
+                        console.error("Error updating document: ", error);
+                    });
             }
         });
     }
