--- a/public/onboarding-allocation.html
+++ b/public/onboarding-allocation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Goodist | Budget</title>
+    <title>Goodist | Allocation</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,6 +19,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Range slider library (https://rangeslider.js.org/) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rangeslider.js@2.3.3/dist/rangeslider.css" integrity="sha256-jJApoDvazb6sRGbc3gE+wdEAE0cE0H1Ag3k1qCada9c=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/rangeslider.js@2.3.3/dist/rangeslider.min.js" integrity="sha256-vFhEtGnaQ2xB+yjBTSXxssthNcfdbzu+lmLYhCdp2Cc=" crossorigin="anonymous"></script>
 
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -46,16 +50,16 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">What is your monthly giving budget?</h1>
+    <h1 class="mb-5">How much would you like to give to each cause?</h1>
 
-    <div id="budgetSelector" class="mb-5" style="max-width: 800px; margin: 0 auto;">
+    <div id="allocationSetter" class="mb-5" style="max-width: 800px; margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
 
-    <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
-    <button id="submitBudgetButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitBudget();">Continue <i class="bi bi-arrow-right"></i></button>
+    <a class="btn btn-outline-primary btn-lg" href="onboarding-budget.html" role="button">Back</a>
+    <button id="submitAllocationButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitAllocation();">Continue <i class="bi bi-arrow-right"></i></button>
 </div>
 
 <script>
@@ -83,51 +87,34 @@
 
                         // In any event, build the budget selector HTML.
                         const html = `
-                            <div style="max-width: 325px; margin: 0 auto;">
-                                <div class="row gx-2 mb-2">
-                                    <div class="col">
-                                        <div id="budget-5" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(5);">$5</div>
-                                    </div>
-                                    <div class="col">
-                                        <div id="budget-10" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(10);">$10</div>
-                                    </div>
-                                    <div class="col">
-                                        <div id="budget-25" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(25);">$25</div>
-                                    </div>
-                                    <div class="col">
-                                        <div id="budget-50" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(50);">$50</div>
-                                    </div>
+                            <div style="max-width: 300px; margin: 0 auto;">
+                                <!-- Budget left -->
+                                <div class="mb-5">
+                                    Remaining budget: $${userData.budget}
                                 </div>
 
-                                <div class="row gx-2 mb-2">
-                                    <div class="col">
-                                        <div id="budget-100" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(100);">$100</div>
+                                <!-- Sliders -->
+                                <div>
+                                    <input class="causeSlider"
+                                        type="range"
+                                        min="10"
+                                        max="100"
+                                        step="5"
+                                        value="30"
+                                    >
+                                    <div class="d-flex justify-content-between px-1 pt-4">
+                                        <p>Cause 1</p>
+                                        <p>30</p>
                                     </div>
-                                    <div class="col">
-                                        <div id="budget-250" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(250);">$250</div>
-                                    </div>
-                                    <div class="col">
-                                        <div id="budget-500" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(500);">$500</div>
-                                    </div>
-                                    <div class="col">
-                                        <div id="budget-1000" class="budgetButton cursor-hover border rounded p-2" onclick="setBudget(1000);">$1,000</div>
-                                    </div>
-                                </div>
-
-                                <div class="input-group mb-3">
-                                    <span class="input-group-text" id="dollaSign">$</span>
-                                    <input id="customAmount" type="number" step="5" min="5" max="999999" class="form-control" oninput="handleCustomAmountChange(event);" placeholder="Custom amount" aria-label="customAmount" aria-describedby="dollaSign">
                                 </div>
                             </div>
                         `;
 
-                        // Put it in the DOM.
-                        $('#budgetSelector').html(html);
+                        $('#allocationSetter').html(html);
 
-                        // If this user already has a budget set, update the UI now.
-                        if (userData.budget) {
-                            setBudget(userData.budget);
-                        }
+                        $('.causeSlider').rangeslider({
+                            polyfill: false
+                        });
                     } else {
                         // doc.data() will be undefined in this case
                         console.log("No such document!");
@@ -158,7 +145,7 @@
         app.userBudget = amount;
 
         // Now that something is set, enable the button.
-        $('#submitBudgetButton').removeClass('disabled');
+        $('#submitAllocationButton').removeClass('disabled');
     }
 
     function handleCustomAmountChange(e) {
@@ -168,13 +155,7 @@
         custom.removeClass('selected');
 
         // The user has input a new custom amount for the budget.
-        let amount = $('#customAmount').val();
-
-        // Make sure it's an int.
-        if (!Number.isInteger(amount)) {
-            amount = Math.round(amount);
-            custom.val(amount);
-        }
+        const amount = $('#customAmount').val();
 
         // Set the custom input as selected.
         custom.addClass('selected');
@@ -184,12 +165,12 @@
 
         if (amount >= 5 && amount <= 999999) {
             // Now that something is set, enable the button.
-            $('#submitBudgetButton').removeClass('disabled');
+            $('#submitAllocationButton').removeClass('disabled');
         }
     }
 
-    function submitBudget() {
-        const btn = $('#submitBudgetButton');
+    function submitAllocation() {
+        const btn = $('#submitAllocationButton');
         // Don't do anything if the button is disabled.
         if (btn.hasClass('disabled')) {
             alert('Choose a monthly budget to continue');
@@ -224,8 +205,7 @@
                     budget: app.userBudget
                 })
                 .then(() => {
-                    // Success! We can go on to the next step.
-                    window.location.href = 'onboarding-allocation.html';
+                    console.log("Document successfully updated!");
                 })
                 .catch((error) => {
                     // The document probably doesn't exist.
