--- a/public/onboarding-budget.html
+++ b/public/onboarding-budget.html
@@ -53,9 +53,21 @@
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
+</div>
 
-    <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
-    <button id="submitBudgetButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitBudget();">Continue <i class="bi bi-arrow-right"></i></button>
+<div id="footerMenuContainer" class="d-flex justify-content-center border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
+    <div class="row gx-3" style="width: 600px;">
+        <div class="col-4">
+            <div class="d-grid gap-2">
+                <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="d-grid gap-2">
+                <button id="submitBudgetButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitBudget();">Continue <i class="bi bi-arrow-right"></i></button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
