--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Goodist | Causes</title>
+    <title>Goodist | Payment method</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -46,25 +46,30 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">Which causes would you like to support?</h1>
+    <h1 class="mb-5">How much would you like to give to each cause?</h1>
 
-    <div id="causeSelector" class="mb-5" style="max-width: 800px; margin: 0 auto;">
+    <div id="allocationSetter" class="mb-5" style="max-width: 375px; margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
 </div>
 
-<div id="footerMenuContainer" class="d-flex justify-content-center border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
-    <div class="row gx-3" style="width: 600px;">
-        <div class="col-4">
-            <div class="d-grid gap-2">
-                <a class="btn btn-outline-primary btn-lg" href="onboarding-welcome.html" role="button">Back</a>
+<div id="footerMenuContainer" class="border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
+    <div class="progress mb-3" style="height: 25px;">
+        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">$20 left</div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <div class="row gx-3" style="width: 600px;">
+            <div class="col-4">
+                <div class="d-grid gap-2">
+                    <a class="btn btn-outline-primary btn-lg" href="onboarding-budget.html" role="button">Back</a>
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="d-grid gap-2">
-                <button id="submitCausesButton" type="button" class="btn btn-primary btn-lg disabled" onclick="submitCauses();">Continue <i class="bi bi-arrow-right"></i></button>
+            <div class="col-8">
+                <div class="d-grid gap-2">
+                    <button id="submitAllocationButton" type="button" class="btn btn-primary btn-lg disabled flex-grow-1" onclick="submitAllocation();">Continue <i class="bi bi-arrow-right"></i></button>
+                </div>
             </div>
         </div>
     </div>
@@ -73,6 +78,9 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         app.checkFirebaseServices();
+
+        // Set this global variable now.
+        app.userBudget = null;
 
         // This is the login/signup page, so first check if the user is already logged in.
         firebase.auth().onAuthStateChanged((user) => {
@@ -89,54 +97,43 @@
                     if (userDoc.exists) {
                         // If it exists, then get the causes data.
                         db.collection("causes").get().then((querySnapshot) => {
-                            let causesHTML = '';
-                            let anyChecked = false;
-                            querySnapshot.forEach((causeDoc) => {
-                                // causeData.data() is never undefined for query doc snapshots.
-                                // Get the data for both causes and users.
-                                const causeData = causeDoc.data();
-                                const userData = userDoc.data();
+                            // Grab the user data.
+                            const userData = userDoc.data();
 
-                                // Is this cause in the user's causes?
-                                let checked = false;
-                                if (userData.causes) {
-                                    for (let c of userData.causes) {
-                                        if (c.id == causeDoc.id) {
-                                            checked = true;
-                                            anyChecked = true;
-                                            break;
-                                        }
+                            // Build an input for each cause associated with the user.
+                            let allocatorsHTML = '';
+                            for (const uc of userData.causes) {
+                                // Get the cause record for this cause.
+                                let causeData;
+                                querySnapshot.forEach((causeDoc) => {
+                                    // causeData.data() is never undefined for query doc snapshots.
+                                    // Get the data for both causes and users.
+                                    if (uc.id == causeDoc.id) {
+                                        causeData = causeDoc.data();
                                     }
-                                }
+                                });
 
-                                // Build the HTML.
-                                causesHTML += `
-                                    <div class="col">
-                                        <div id="${causeDoc.id}" class="card causeCard cursor-hover" onclick="toggleCause('${causeDoc.id}');">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="causeName p-3 text-start">
-                                                    ${causeData.cause_name}<i class="bi bi-info-circle-fill ms-2"></i>
-                                                </div>
-                                                <div class="causeCheck ${checked ? 'checked' : 'unchecked'} py-2 px-3" style="font-size: 1.5rem;">
-                                                    <i class="bi bi-${checked ? 'check-' : ''}square"></i>
-                                                </div>
+                                // Build the HTML for this allocator.
+                                allocatorsHTML += `
+                                    <div class="d-flex justify-content-between mb-3">
+                                        <div class="d-flex align-items-center">
+                                            ${causeData.cause_name}
+                                        </div>
+                                        <div>
+                                            <div class="input-group" style="max-width: 150px;">
+                                                <span class="input-group-text" id="dollaSign">$</span>
+                                                <input id="amount-${uc.id}" type="number" step="5" min="5" max="999999" class="form-control" oninput="handleCustomAmountChange(event);" value="${1 / userData.causes.length}" aria-label="customAmount" aria-describedby="dollaSign">
                                             </div>
                                         </div>
                                     </div>
                                 `;
-                            });
+                            }
 
-                            // Put the causes together into a list.
-                            $('#causeSelector').html(`
-                                <div id="causesList" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                                    ${causesHTML}
+                            $('#allocationSetter').html(`
+                                <div id="allocatorsList">
+                                    ${allocatorsHTML}
                                 </div>
                             `);
-
-                            // If any of the options are already checked on load, the button should be available.
-                            if (anyChecked) {
-                                $('#submitCausesButton').removeClass('disabled');
-                            }
                         });
                     } else {
                         // doc.data() will be undefined in this case
@@ -149,38 +146,61 @@
         });
     });
 
-    function toggleCause(causeId) {
-        // Check or uncheck this cause.
-        const card = $(`#${causeId}`);
-        const checkContainer = card.find('.causeCheck');
-        if (checkContainer.hasClass('checked')) {
-            // It's currently checked. Uncheck it.
-            checkContainer.removeClass('checked');
-            checkContainer.addClass('unchecked');
-            checkContainer.html(`<i class="bi bi-square"></i>`);
+    function setBudget(amount) {
+        // Remove any previous selection.
+        $(".budgetButton").removeClass('selected');
+        const custom = $("#customAmount");
+        custom.removeClass('selected');
+
+        // If amount matches any of the pre-set buttons, select that button.
+        const btn = $(`#budget-${amount}`);
+        if (btn.length) {
+            btn.addClass('selected');
         } else {
-            // It's currently unchecked. Check it.
-            checkContainer.removeClass('unchecked');
-            checkContainer.addClass('checked');
-            checkContainer.html(`<i class="bi bi-check-square"></i>`);
+            // It doesn't match a suggested budget button. Put it in the custom amount field and select it.
+            custom.val(amount).addClass('selected');
         }
 
-        // After this operation are there any checked causes? If not, disable the button.
-        const list = $('#causesList');
-        if (list.find('.checked').length > 0) {
-            // At least one is checked. Okay to continue.
-            $('#submitCausesButton').removeClass('disabled');
-        } else {
-            // None are checked. User can't continue.
-            $('#submitCausesButton').addClass('disabled');
+        // Set the value in the state.
+        app.userBudget = amount;
+
+        // Now that something is set, enable the button.
+        $('#submitAllocationButton').removeClass('disabled');
+    }
+
+    function handleCustomAmountChange(e) {
+        // Remove any previous selection.
+        $(".budgetButton").removeClass('selected');
+        const custom = $("#customAmount");
+        custom.removeClass('selected');
+
+        // The user has input a new custom amount for the budget.
+        const amount = $('#customAmount').val();
+
+        // Set the custom input as selected.
+        custom.addClass('selected');
+
+        // Set the value in the state.
+        app.userBudget = amount;
+
+        if (amount >= 5 && amount <= 999999) {
+            // Now that something is set, enable the button.
+            $('#submitAllocationButton').removeClass('disabled');
         }
     }
 
-    function submitCauses() {
-        const btn = $('#submitCausesButton');
+    function submitAllocation() {
+        const btn = $('#submitAllocationButton');
         // Don't do anything if the button is disabled.
         if (btn.hasClass('disabled')) {
-            alert('Choose at least one cauase to continue');
+            alert('Choose a monthly budget to continue');
+            return;
+        }
+
+        // Check that the amount is in range.
+        const isInRange = app.userBudget >= 5 && app.userBudget <= 999999;
+        if (!isInRange) {
+            alert(`Please select a budget between $5 and $999,999`);
             return;
         }
 
@@ -190,14 +210,6 @@
             Continue <i class="bi bi-arrow-right"></i>
         `);
         btn.addClass('disabled');
-
-        // Get the IDs of the selected causes.
-        const selectedCauses = [];
-        $('#causesList').find('.causeCard').each(function( index ) {
-            if ($(this).find('.causeCheck').hasClass('checked')) {
-                selectedCauses.push({id: this.id, giving_amount: null});
-            }
-        });
 
         // Get the user again, making sure they're still logged in.
         firebase.auth().onAuthStateChanged((user) => {
@@ -210,16 +222,15 @@
                 const docRef = db.collection("users").doc(user.uid);
                 // Attempt to do the update.
                 docRef.update({
-                    causes: selectedCauses
+                    budget: app.userBudget
                 })
-                .then(() => {
-                    // Success! Move on to budget input.
-                    window.location.href = 'onboarding-budget.html';
-                })
-                .catch((error) => {
-                    // The document probably doesn't exist.
-                    alert("Error updating document: " + error);
-                });
+                    .then(() => {
+                        console.log("Document successfully updated!");
+                    })
+                    .catch((error) => {
+                        // The document probably doesn't exist.
+                        console.error("Error updating document: ", error);
+                    });
             }
         });
     }
