--- a/public/onboarding-allocation.html
+++ b/public/onboarding-allocation.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+    <!-- Stripe JS library -->
+    <script src="https://js.stripe.com/v3/"></script>
+
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
@@ -56,8 +59,13 @@
 </div>
 
 <div id="footerMenuContainer" class="border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
-    <div class="progress mb-3" style="height: 30px;">
-        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100% allocated</div>
+    <div class="d-flex justify-content-center">
+        <div class="px-2" style="width: 600px;">
+            <div class="d-flex flex-column mb-4">
+                <h5 id="progressTotal" class="mb-3"></h5>
+                <h5 id="progressEach"></h5>
+            </div>
+        </div>
     </div>
     <div class="d-flex justify-content-center">
         <div class="row gx-3" style="width: 600px;">
@@ -79,9 +87,6 @@
     document.addEventListener('DOMContentLoaded', function() {
         app.checkFirebaseServices();
 
-        // Set this global variable now.
-        app.userBudget = null;
-
         // This is the login/signup page, so first check if the user is already logged in.
         firebase.auth().onAuthStateChanged((user) => {
             if (!user) {
@@ -99,6 +104,10 @@
                         db.collection("causes").get().then((querySnapshot) => {
                             // Grab the user data.
                             const userData = userDoc.data();
+
+                            // Put the causes and budget in the state.
+                            app.causes = userData.causes;
+                            app.budget = userData.budget;
 
                             // Build an input for each cause associated with the user.
                             let allocatorsHTML = '';
@@ -121,8 +130,8 @@
                                         </div>
                                         <div>
                                             <div class="input-group" style="max-width: 150px;">
-                                                <span class="input-group-text" id="dollaSign">$</span>
-                                                <input id="amount-${uc.id}" type="number" step="5" min="5" max="999999" class="form-control" oninput="handleCustomAmountChange(event);" value="${1 / userData.causes.length}" aria-label="customAmount" aria-describedby="dollaSign">
+                                                <span class="input-group-text">$</span>
+                                                <input id="amount-${uc.id}" type="number" step="1" min="1" max="999999" class="form-control" value="${uc.giving_amount}" oninput="handleAllocatorInput(event, '${uc.id}');">
                                             </div>
                                         </div>
                                     </div>
@@ -134,6 +143,9 @@
                                     ${allocatorsHTML}
                                 </div>
                             `);
+
+                            // Update the progress guides and continue button.
+                            updateContinueButton();
                         });
                     } else {
                         // doc.data() will be undefined in this case
@@ -146,65 +158,89 @@
         });
     });
 
-    function setBudget(amount) {
-        // Remove any previous selection.
-        $(".budgetButton").removeClass('selected');
-        const custom = $("#customAmount");
-        custom.removeClass('selected');
-
-        // If amount matches any of the pre-set buttons, select that button.
-        const btn = $(`#budget-${amount}`);
-        if (btn.length) {
-            btn.addClass('selected');
-        } else {
-            // It doesn't match a suggested budget button. Put it in the custom amount field and select it.
-            custom.val(amount).addClass('selected');
+    function handleAllocatorInput(e, causeId) {
+        // Find the cause in the state.
+        let cause;
+        for (const c of app.causes) {
+            if (c.id == causeId) {
+                cause = c;
+                break;
+            }
         }
 
-        // Set the value in the state.
-        app.userBudget = amount;
+        // Update the state.
+        const input = $(e.target);
+        cause.giving_amount = parseInt(input.val());
 
-        // Now that something is set, enable the button.
-        $('#submitAllocationButton').removeClass('disabled');
+        // What is the new total?
+        let total = getTotal();
+
+        // If the new total is more than the budget, reduce it to the budget.
+        if (app.budget - total < 0) {
+            // We're overbudget. How much do we have to reduce it?
+            let otherTotal = 0;
+            for (const c of app.causes) {
+                if (c.id !== causeId) {
+                    otherTotal += c.giving_amount ? c.giving_amount : 0;
+                }
+            }
+            const maxAmount = app.budget - otherTotal;
+
+            // Update the state.
+            cause.giving_amount = maxAmount;
+
+            // Update the HTML input.
+            input.val(maxAmount);
+        }
+
+        // Update the progress guides and continue button.
+        updateContinueButton();
     }
 
-    function handleCustomAmountChange(e) {
-        // Remove any previous selection.
-        $(".budgetButton").removeClass('selected');
-        const custom = $("#customAmount");
-        custom.removeClass('selected');
+    function getTotal() {
+        let total = 0;
+        for (const c of app.causes) {
+            if (c.giving_amount) {
+                total += c.giving_amount;
+            }
+        }
+        return total;
+    }
 
-        // The user has input a new custom amount for the budget.
-        const amount = $('#customAmount').val();
+    function updateContinueButton() {
+        // From the state, establish whether the user can continue.
+        // User needs to have met budget and not have any cause with zero giving amount.
+        const total = getTotal();
+        const atBudget = total == app.budget;
+        let causeWithZero = false;
+        let causesSet = 0;
+        for (const c of app.causes) {
+            if (!c.giving_amount) {
+                causeWithZero = true;
+            } else {
+                causesSet++;
+            }
+        }
 
-        // Set the custom input as selected.
-        custom.addClass('selected');
+        // Update the progress guides.
+        const budgetIcon = atBudget ? '<i class="bi bi-check-circle-fill text-success"></i>' : '<i class="bi bi-x-circle-fill text-danger"></i>';
+        $("#progressTotal").html(`${budgetIcon}&nbsp;&nbsp;$${total} of $${app.budget} allocated`);
+        const eachIcon = !causeWithZero ? '<i class="bi bi-check-circle-fill text-success"></i>' : '<i class="bi bi-x-circle-fill text-danger"></i>';
+        $("#progressEach").html(`${eachIcon}&nbsp;&nbsp;${causesSet} of ${app.causes.length} causes set`);
 
-        // Set the value in the state.
-        app.userBudget = amount;
 
-        if (amount >= 5 && amount <= 999999) {
-            // Now that something is set, enable the button.
+        if (atBudget && !causeWithZero) {
+            // Good to go!
             $('#submitAllocationButton').removeClass('disabled');
+        } else {
+            // Not ready yet.
+            $('#submitAllocationButton').addClass('disabled');
         }
     }
 
     function submitAllocation() {
-        const btn = $('#submitAllocationButton');
-        // Don't do anything if the button is disabled.
-        if (btn.hasClass('disabled')) {
-            alert('Choose a monthly budget to continue');
-            return;
-        }
-
-        // Check that the amount is in range.
-        const isInRange = app.userBudget >= 5 && app.userBudget <= 999999;
-        if (!isInRange) {
-            alert(`Please select a budget between $5 and $999,999`);
-            return;
-        }
-
         // Give the button a spinner.
+        const btn = $('#submitAllocationButton');
         btn.html(`
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Continue <i class="bi bi-arrow-right"></i>
@@ -222,10 +258,10 @@
                 const docRef = db.collection("users").doc(user.uid);
                 // Attempt to do the update.
                 docRef.update({
-                    budget: app.userBudget
+                    causes: app.causes
                 })
                 .then(() => {
-                    console.log("Document successfully updated!");
+                    // Send to Stripe Checkout?
                 })
                 .catch((error) => {
                     // The document probably doesn't exist.
