--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+    <!-- Stripe JS library -->
+    <script src="https://js.stripe.com/v3/"></script>
+
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
