--- a/public/onboarding-welcome.html
+++ b/public/onboarding-welcome.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+    <!-- Stripe JS library -->
+    <script src="https://js.stripe.com/v3/"></script>
+
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
@@ -46,7 +49,7 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <img style="width: 200px; height: 200px;" src="https://firebasestorage.googleapis.com/v0/b/aidflow.appspot.com/o/marketing%2Fwelcome.png?alt=media&token=349a4f5c-29be-4513-adca-02f0c8429c17" alt="image of heart shaped world">
+    <img style="width: 200px; height: 200px;" src="images/welcome.png" alt="image of heart shaped world">
     <h1 class="mt-4 mb-3">Welcome!</h1>
     <p class="mb-5">Start by picking up to <span id="causeCount">10</span> causes to support</p>
     <a class="btn btn-primary btn-lg" href="onboarding-causes.html" role="button">Let's go!</a>
