--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Goodist | Portfolio</title>
+    <title>Goodist | Payment</title>
 
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,9 +22,6 @@
 
     <!-- Stripe JS library -->
     <script src="https://js.stripe.com/v3/"></script>
-
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js" integrity="sha256-ErZ09KkZnzjpqcane4SCyyHsKAXMvID9/xwbl/Aq1pc=" crossorigin="anonymous"></script>
 
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -51,47 +48,35 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-<header>
-    <div class="px-3 py-2 border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-                    <h3 class="m-0">Goodist</h3>
-                </a>
+<div class="container text-center py-5 px-3">
+    <h1 class="mb-5">Select a payment method</h1>
 
-                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                    <li>
-                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-secondary">
-                            <i class="bi bi-pie-chart-fill" style="font-size: 1.25rem;"></i>
-                            Portfolio
-                        </a>
-                    </li>
-                    <li>
-                        <a href="impact.html" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-emoji-smile" style="font-size: 1.25rem;"></i>
-                            Impact
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-gear-fill" style="font-size: 1.25rem;"></i>
-                            Settings
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                            <i class="bi bi-box-arrow-left" style="font-size: 1.25rem;"></i>
-                            Sign out
-                        </a>
-                    </li>
-                </ul>
+    <p>[Stripe coming soon]</p>
+
+    <form id="payment-form">
+        <div id="payment-element">
+            <!-- Elements will create form elements here -->
+        </div>
+        <!--<button id="submit">Subscribe</button>-->
+        <div id="error-message">
+            <!-- Display error message to your customers here -->
+        </div>
+    </form>
+</div>
+
+<div id="footerMenuContainer" class="d-flex justify-content-center border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
+    <div class="row gx-3" style="width: 600px;">
+        <div class="col-4">
+            <div class="d-grid gap-2">
+                <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="d-grid gap-2">
+                <button id="submitBudgetButton" type="button" class="btn btn-primary btn-lg disabled" onclick="alert('Not hooked up yet');">Continue <i class="bi bi-arrow-right"></i></button>
             </div>
         </div>
     </div>
-</header>
-
-<div class="container">
-    [Portfolio here]
 </div>
 
 <script>
@@ -100,12 +85,46 @@
 
         // This is the login/signup page, so first check if the user is already logged in.
         firebase.auth().onAuthStateChanged((user) => {
-            if (user) {
+            if (!user) {
+                // User is signed out. They can't be on this page. Put them back on the auth page.
+                window.location.href = 'index.html';
+            } else {
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
-            } else {
-                // User is signed out. They can't be on this page. Put them back on the auth page.
+                const db = firebase.firestore();
+                // First, get the user data.
+                db.collection("users").doc(user.uid).get().then((userDoc) => {
+                    if (userDoc.exists) {
+                        // If the user record exists, see if the user already has an active subscription.
+                        const userData = userDoc.data();
+                        const userEmail = user.email;
+                        const hasSub = false;
+
+                        if (!hasSub) {
+                            // No subscription yet. Add one!
+
+                            // Initialize Cloud Functions through Firebase
+                            const functions = firebase.functions();
+
+                            // Set up the stripe Customer and Subscription.
+                            const setupStripe = functions.httpsCallable('setupStripe');
+                            setupStripe({email: userEmail, name: `${userData.first_name} ${userData.last_name}`})
+                                .then((result) => {
+                                    // Read result of the Cloud Function.
+                                    debugger;
+                                });
+                        } else {
+                            // Already has a subscription. Put them on the dashboard page.
+                            window.location.href = 'portfolio.html';
+                        }
+                    } else {
+                        // doc.data() will be undefined in this case
+                        console.log("No such document!");
+                    }
+                }).catch((error) => {
+                    console.log("Error getting document:", error);
+                });
             }
         });
     });
