--- a/public/settings.html
+++ b/public/settings.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-                    <h3 class="m-0">Logo</h3>
+                    <h3 class="m-0">Goodist</h3>
                 </a>
 
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
