A few quick UI things

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="" class="d-flex flex-column justify-content-center align-items-center nav-link">
+                        <a href="settings.html" class="d-flex flex-column justify-content-center align-items-center nav-link">
                             <i class="bi bi-gear-fill" style="font-size: 1.25rem;"></i>
                             Settings
                         </a>
@@ -91,7 +91,7 @@
 </header>
 
 <div class="container">
-    [Portfolio here]
+    <h1>[Portfolio here]</h1>
 </div>
 
 <script>
