--- a/public/onboarding-welcome.html
+++ b/public/onboarding-welcome.html
@@ -18,7 +18,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Stripe JS library -->
     <script src="https://js.stripe.com/v3/"></script>
@@ -50,9 +50,16 @@
 <body>
 <div class="container text-center py-5 px-3">
     <img style="width: 200px; height: 200px;" src="images/welcome.png" alt="image of heart shaped world">
-    <h1 class="mt-4 mb-3">Welcome!</h1>
+    <h1 class="mt-5 mb-3">Welcome!</h1>
     <p class="mb-5">Start by picking up to <span id="causeCount">10</span> causes to support</p>
-    <a class="btn btn-primary btn-lg" href="onboarding-causes.html" role="button">Let's go!</a>
+</div>
+
+<div id="footerMenuContainer" class="d-flex justify-content-center border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
+    <div style="width: 600px;">
+        <div class="d-grid gap-2">
+            <a class="btn btn-primary btn-lg" href="onboarding-causes.html" role="button">Let's go!</a>
+        </div>
+    </div>
 </div>
 
 <script>
